--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ button:hover { background: #ff2e63; }
 <body>
 
 <h2>💖 Test Ultime : Connais-tu vraiment notre couple ? 💖</h2>
-<p>70% minimum pour débloquer ta surprise 😏</p>
+<p>7/10 minimum pour débloquer ta surprise 😏</p>
 
 <form id="quizForm">
 
@@ -163,7 +163,7 @@ function checkQuiz() {
       "Tu me connais beaucoup trop bien 😏💖<br><br><a href='https://bemyval.co/a8_vvqhlsui' target='_blank'><button>Accéder à ta surprise 🎁</button></a>";
   } else {
     document.getElementById("result").innerHTML =
-      "Oups… Il faut encore réviser notre histoire 😈<br><br><button onclick='location.reload()'>Réessayer</button>";
+      "Oups… Il faut encore réviser notre histoire ! Recommence 😈<br><br><button onclick='location.reload()'>Réessayer</button>";
   }
 }
 
