--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@ button:hover { background: #ff2e63; }
 
 <div class="question">
 <p>6. Nos blagues préférées :</p>
-<input type="radio" name="q6" value="0"> “La licorne rose”<br>
-<input type="radio" name="q6" value="0"> “Pigeon 2.0”<br>
-<input type="radio" name="q6" value="0"> “Banane biloute”<br>
-<input type="radio" name="q6" value="1"> “Trop vieille pour comprendre cette question”<br>
+<input type="radio" name="q6" value="0"> La licorne rose<br>
+<input type="radio" name="q6" value="0"> Pigeon 2.0<br>
+<input type="radio" name="q6" value="0"> Banane biloute<br>
+<input type="radio" name="q6" value="1"> Trop vieille pour comprendre cette question<br>
 </div>
 
 <div class="question">
