--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ button:hover { background: #ff2e63; }
 
 .scoreInfo { font-size: 14px; color: #555; margin-top: 10px; }
 
+.errorInfo { font-size: 12px; color: #555; margin-top: 5px; }
+
 .heart, .confetti {
   position: fixed;
   top: -50px;
@@ -148,7 +150,7 @@ button:hover { background: #ff2e63; }
 <script>
 function checkQuiz() {
   let score = 0;
-  let total = 9; // 9 questions
+  let total = 9;
   let wrong = [];
 
   for (let i = 1; i <= total; i++) {
@@ -166,19 +168,16 @@ function checkQuiz() {
   let percentage = (score / total) * 100;
 
   let scoreText = "<div class='scoreInfo'>Score : " + score + "/" + total + "</div>";
+  let wrongText = wrong.length > 0 ? "<div class='errorInfo'>Erreur(s) sur la question(s) : " + wrong.join(", ") + "</div>" : "";
 
   if (percentage >= 70) {
     launchHearts();
     launchConfetti();
     document.getElementById('loveSound').play();
-
-    let wrongText = wrong.length > 0 ? "<br>Erreurs sur la question(s) : " + wrong.join(", ") : "";
-    
     document.getElementById("result").innerHTML =
       "Tu me connais beaucoup trop bien 😏💖<br><br><a href='https://bemyval.co/a8_vvqhlsui' target='_blank'><button>Accéder à ta surprise 🎁</button></a>" +
       wrongText + scoreText;
   } else {
-    let wrongText = wrong.length > 0 ? "<br>Erreurs sur la question(s) : " + wrong.join(", ") : "";
     document.getElementById("result").innerHTML =
       "Oups… Il faut encore réviser notre histoire ! 😈" + wrongText + scoreText + "<br><br><button onclick='location.reload()'>Réessayer</button>";
   }
