--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@ button:hover { background: #ff2e63; }
 
 #result { margin-top: 25px; font-size: 18px; }
 
-.scoreInfo { font-size: 14px; color: #555; margin-top: 10px; }
-.errorInfo { font-size: 10px; color: #555; margin-top: 5px; }
+.scoreInfo, .errorInfo { 
+  font-size: 14px; 
+  color: #555; 
+  margin-top: 5px; 
+}
 
 .heart, .confetti {
   position: fixed;
