--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@ function checkQuiz() {
     launchConfetti();
     document.getElementById('loveSound').play();
     document.getElementById("result").innerHTML =
-      "Tu me connais beaucoup trop bien 😏💖<br><br><a href='https://bemyval.co/a8_vvqhlsui' target='_blank'><button>Accéder à ta surprise 🎁</button></a>" +
+      "Tu nous connais beaucoup trop bien 😏💖<br><br><a href='https://bemyval.co/a8_vvqhlsui' target='_blank'><button>Accéder à ta surprise 🎁</button></a>" +
       wrongText + scoreText;
   } else {
     document.getElementById("result").innerHTML =
-      "Oups… Il faut encore réviser notre histoire ! 😈" + wrongText + scoreText + "<br><br><button onclick='location.reload()'>Réessayer</button>";
+      "Oups… Il faut encore réviser notre histoire, noob ! 😈" + wrongText + scoreText + "<br><br><button onclick='location.reload()'>Réessayer</button>";
   }
 }
 
